# agent-workbench-desktop

./: .gitignore  README.md  SECURITY.md  package-lock.json  package.json  vite.config.ts
docs/: SECURITY-REVIEW.md  SMOKE-TEST-CHECKLIST.md
scripts/: codex-app-server-smoke.mjs  release-checksums.mjs
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ActivityPanel.tsx  Approvals.tsx  Composer.tsx  DebugPanel.tsx  Home.tsx  MainHeader.tsx  Messages.tsx  Sidebar.tsx
src/hooks/: useAppServerEvents.ts  useDebugLog.ts  useModels.ts  useThreads.test.ts  useThreads.ts  useWorkspaces.test.ts  useWorkspaces.ts
src/services/: tauri.ts
src/styles/: activity-panel.css  approvals.css  base.css  composer.css  debug.css  home.css  main.css  messages.css  sidebar.css
src/utils/: redact.ts  security.test.ts  syntax.ts  tauriRuntime.ts  threadState.test.ts  threadState.ts  workspacePath.ts
